--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXKcXjKnsuqS48iQOuXc-ruvr0vV8iCLs&libraries=places,marker"
+  async
+  defer
+></script>
   </body>
 </html>
